# blake2_simd

./: .travis.yml  Cargo.toml  README.md  README.tpl  appveyor.yml  run_all_tests.rs  test.py
.github/workflows/: ci.yml
b2sum/: Cargo.toml
b2sum/src/: main.rs  test.rs
b2sum/tests/: test.rs
benches/: bench.rs  bench_b2sum.py  bench_blake2_bin.py  bench_libsodium.c  bench_libsodium.sh
benches/bench_multiprocess/: Cargo.toml
benches/bench_multiprocess/src/: main.rs
benches/benchmark_gig/: Cargo.toml  out.txt  out2.txt  out3.txt  out4.txt  out_all0.txt  out_all0_oneround.txt  out_all0_oneround_multi.txt  out_all0_oneround_multi2.txt  out_all0_xor.txt  out_all0_xor2.txt  plot.py
benches/benchmark_gig/src/: main.rs
benches/blake2-avx2-neves/: Cargo.toml  build.rs
benches/blake2-avx2-sneves/: Cargo.toml  build.rs
benches/blake2-avx2-sneves/blake2-avx2/: blake2b-common.h  blake2b.c  blake2bp.c  blake2s-common.h
benches/blake2-avx2-sneves/src/: lib.rs
benches/cargo_bench/: Cargo.toml
benches/cargo_bench/src/: lib.rs
benches/count_cycles/: Cargo.toml
benches/count_cycles/src/: main.rs
benches/kangarootwelve/: Cargo.toml  README.md  build.rs
benches/kangarootwelve/K12/: Makefile.build
benches/kangarootwelve/K12/lib/: KangarooTwelve.c
benches/kangarootwelve/K12/lib/Inplace32BI/: KeccakP-1600-SnP.h  KeccakP-1600-inplace32BI.c
benches/kangarootwelve/K12/lib/Optimized64/: KeccakP-1600-AVX2.s  KeccakP-1600-AVX512.s  KeccakP-1600-SnP.h  KeccakP-1600-opt64.c  KeccakP-1600-timesN-AVX2.c  KeccakP-1600-timesN-AVX512.c  KeccakP-1600-timesN-SSSE3.c
benches/kangarootwelve/K12/tests/: testPerformance.c
benches/kangarootwelve/src/: lib.rs
blake2_bin/: Cargo.toml  README.md
blake2_bin/src/: main.rs
blake2_bin/tests/: test.rs
blake2b/: Cargo.toml  README.md
blake2b/fuzz/: Cargo.toml
blake2b/fuzz/fuzz_targets/: fuzz_target_1.rs
blake2b/src/: avx2.rs  blake2bp.rs  guts.rs  lib.rs  many.rs  portable.rs  sse41.rs  test.rs
blake2s/: Cargo.toml  README.md
blake2s/fuzz/: Cargo.toml
blake2s/src/: avx2.rs  blake2sp.rs  guts.rs  lib.rs  many.rs  portable.rs  sse41.rs  test.rs
run_all_tests/: Cargo.toml
run_all_tests/src/: main.rs
src/: avx2.rs  blake2bp.rs  guts.rs  hash_many.rs  lib.rs  many.rs  portable.rs  sse41.rs  test.rs
tests/: fuzz_many.rs  many_tests.rs  vector_tests.rs
