[package]
name = "blake2b_simd"
version = "0.2.3"
authors = ["Jack O'Connor"]
description = "a pure Rust BLAKE2b implementation with dynamic SIMD"
license = "MIT"
repository = "https://github.com/oconnor663/blake2b_simd"
documentation = "https://docs.rs/blake2b_simd"
readme = "README.md"

[dependencies]
arrayref = "0.3.5"
arrayvec = { version = "0.4.7", default-features = false, features = ["use_union"] }
byteorder = { version = "1.2.4", default-features = false }
constant_time_eq = "0.1.3"
rayon = { version = "1.0.2", optional = true }

[features]
blake2bp = ["std", "rayon"]
default = ["std"]
std = []
