[package]
name = "blake2b_simd"
version = "0.5.0"
authors = ["Jack O'Connor"]
description = "a pure Rust BLAKE2b implementation with dynamic SIMD"
license = "MIT"
repository = "https://github.com/oconnor663/blake2b_simd"
documentation = "https://docs.rs/blake2b_simd"
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
arrayref = "0.3.5"
arrayvec = { version = "0.4.7", default-features = false, features = ["use_union"] }
byteorder = { version = "1.2.4", default-features = false }
constant_time_eq = "0.1.3"

[dev-dependencies]
hex = "0.3.2"
lazy_static = "1.1.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.30"
rand = "0.6.5"
rand_chacha = "0.1.1"
