[package]
name = "b2sum"
version = "0.1.0"
authors = ["Jack O'Connor"]
description = "a clone of the coreutils b2sum utility based on blake2b_simd"
license = "MIT"
repository = "https://github.com/oconnor663/blake2b_simd/tree/master/b2sum"

[dependencies]
blake2b_simd = { path = ".." }
hex = "0.3.2"
memmap = "0.7.0"
structopt = "0.2.10"

[dev-dependencies]
duct = "0.11.0"
tempfile = "3.0.3"
