[package]
name = "blake2_bin"
version = "0.5.6"
authors = ["Jack O'Connor"]
description = "a command line implementation of BLAKE2b/s/bp/sp and all their parameters"
license = "MIT"
repository = "https://github.com/oconnor663/blake2_simd/tree/master/blake2_bin"
edition = "2018"

[[bin]]
name = "blake2"
path = "src/main.rs"

[dependencies]
blake2b_simd = { path = "../blake2b", version = "0.5" }
blake2s_simd = { path = "../blake2s", version = "0.5" }
failure = "0.1.5"
hex = "0.3.2"
memmap = "0.7.0"
structopt = "0.2.15"

[dev-dependencies]
assert_cmd = "0.11.1"
duct = "0.12.0"
tempfile = "3.0.8"
