[package]
name = "blake2_bin"
version = "1.0.2"
authors = ["Jack O'Connor"]
description = "a command line implementation of BLAKE2b/s/bp/sp and all their parameters"
license = "MIT"
repository = "https://github.com/oconnor663/blake2_simd/tree/master/blake2_bin"
readme = "README.md"
keywords = ["blake2b", "blake2bp", "blake2s", "blake2sp", "blake2"]
edition = "2021"

[[bin]]
name = "blake2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
blake2b_simd = { path = "../blake2b", version = "1" }
blake2s_simd = { path = "../blake2s", version = "1" }
hex = "0.4.0"
memmap = "0.7.0"
structopt = "0.3.2"

[dev-dependencies]
assert_cmd = "2.0.8"
duct = "0.13.0"
tempfile = "3.1.0"
