[package]
name = "bench_multiprocess"
version = "0.0.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2021"

[dependencies]
blake2b_simd = { path = "../../blake2b" }
blake2s_simd = { path = "../../blake2s" }
blake3 = { version = "0.2.1", features = ["c"] }
rand = "0.6.5"
openssl = "0.10.23"
libsodium-ffi = "0.1.17"
blake2-avx2-sneves = { path = "../blake2-avx2-sneves" }
page_size = "0.4.1"
arrayvec = "0.7.0"
