[package]
name = "bench"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[dependencies]
blake2b_simd = { path = "../.." }
libsodium-ffi = { version = "0.1.12", optional = true }
openssl = { version = "0.10.12", optional = true }
rand = "0.6.5"

[features]
default = ["libsodium-ffi", "openssl"]
